[Feature #166241007] Search Functionality Added to Authors Haven (#53)
